# Vulkan-Raytracing-Engine

./: CMakeLists.txt  README.md  build_and_run.bat  main.cpp
assets/: CornellBox-Original.mtl
